# gokart_delete_cache

./: pyproject.toml
src/: delete.py
