[tool.poetry]
name = "gokart-delete-cache"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "gokart_delete_cache"}]

[tool.poetry.dependencies]
python = "~3.10"
boto3 = "^1.26.156"
gokart = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
